# diff-traffic-baseline-hwm

./: .gitignore  Doxyfile  GIT-VERSION-GEN  Makefile.am  README.md  arz.hpp  awz.hpp  circ.py  configure.ac  data_draw.xml  fundiag.py  inhomo-test.cpp  intersect-test.xml  intersection.cpp  intersection.hpp  intersection.xml  interval-test.cpp  intervals.hpp  lane-test.cpp  lane.cpp  lane.hpp  lanetest.cpp  merge-test.xml  network.cpp  network.hpp  network.xml  network2.xml  plot.cpp  plot.hpp  road.cpp  road.hpp  showlane.cpp  shownetwork.cpp  showsim.cpp  test_solve.cpp  xml-test.cpp  xml-util.hpp
blender/: .gitignore  import_traffic.py  load_cars.py  moveit.py  traffic.py
data/: clover.xml  intersect-test.xml  intersection.xml  map_with_heights.xml  network.xml
doc/: Doxyfile.in  Makefile.am
etc/: .gitignore  Makefile.am  bin-pack.cpp  bin-pack.py  circ.py  clover_routes.py  compare-performance.txt  divide.py  fresnel.py  fundiag.py  kinematic-table.py  kinematics.cpp  kinematics.tex  lc_kinematics.cpp  pc-int-test.cpp  pc-integrate.hpp  pc-integrate.py  pc-poisson.hpp  poisson-samples.py  rate.py  readlog.py  riemann_plot.py  run-tests.py  scaleplot.py  ss_kinematics.cpp  ss_kinematics.tex
etc/cars/: accord.xml  chevyvan.xml  golf.xml  pickup.xml  tbird.xml
etc/sumo-compare/: hwm-comp.xml  run-comparison.py  sumo_route.py
etc/sumo-compare/dense/: dense.net.xml
etc/sumo-compare/med-dense/: e-compare.xml
etc/sumo-compare/sparse/: sparse-hwm.xml
etc/sumo-compare/sumo-data/: comp.sumo.cfg  flow.xml  fout.rou.xml  net.net.xml  nodes.xml
libarz/: .gitignore  Makefile.am  arz-eq.hpp  arz-impl.hpp  arz.hpp  macro-sim.cpp  macro-sim.hpp
libhybrid/: Makefile.am  allocate.hpp  arz-eq.hpp  arz-impl.hpp  arz.hpp  hybrid-draw.cpp  hybrid-macro.cpp  hybrid-micro.cpp  hybrid-sim-omp.cpp  hybrid-sim.cpp  hybrid-sim.hpp  hybrid.cpp  libhybrid-common.hpp  macro-sim.cpp  pc-integrate.hpp  pc-poisson.hpp
m4/: ax_boost_base.m4  boost.m4
msvc/: hwm-libroad.sln  hwm-libroad.vcproj  hwm.sln  xml-test.vcproj
msvc/shownetwork/: shownetwork.vcproj
msvc/test/hybrid/: hybrid.vcproj
msvc/xml-test/: xml-test.vcproj
ogre/: .gitignore
ogre/include/: ExampleFrameListener.h  Makefile.am
ogre/meshes/: body.material  myOverlays.overlay  pixel.material  pixel.program  pixel_test1.cg  wheel.material
ogre/src/: .gitignore  Makefile.am  SampleApp.cpp  camcorder.cpp  camcorder.hpp  hwm-viewer.cpp  hwm-viewer.hpp  my_terrain.cfg
python/: test_approximation.py  test_discrete.py  test_poisson.py
sim/include/: Makefile.am  arz.hpp  car-models.hpp  car-stream.hpp  intersection.hpp  intervals.hpp  lane.hpp  network.hpp  road.hpp  xml-util.hpp
sim/src/: Makefile.am  car-models.cpp  car-stream.cpp  intersection.cpp  lane.cpp  network.cpp  plot.cpp  road.cpp  showlane.cpp  showsim.cpp  test_solve.cpp
test/: .gitignore  Makefile.am  array_macros.hpp  big-image-tile.hpp  cairo-traffic.cpp  car-animation.cpp  car-animation.hpp  dump-to-png.cpp  gl-common.hpp  helper-window.cpp  helper-window.fl  helper-window.hpp  hybrid-viewer.cpp  hybrid.cpp  ih-riemann-test.cpp  image-average.cpp  intersect-test.xml  macro-viewer.cpp  macro.cpp  monochrome-render.hpp  night-render.hpp  pc-int-test.cpp  single-lane.xml  traffic-2d.cpp
test-progs/: .gitignore  Makefile.am  car-data-test.cpp  count-cars.cpp  inhomo-test.cpp  interval-test.cpp  lane-test.cpp  plot.cpp  plot.hpp  plotwin.hpp  replay-sim.cpp  road-geom.cpp  run-sim.cpp  shownetwork.cpp  showsim.cpp
